--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+Editando el README directamente en el proyecto, sin forkear
+
+
 == Welcome to Rails
 
 Rails is a web-application framework that includes everything needed to create
